--- a/nextjs-blog/packages/frontend/package.json
+++ b/nextjs-blog/packages/frontend/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@marketplace/store": "0.0.0",
+    "express": "^4.18.1",
     "next": "12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shared": "0.0.0",
-    "@marketplace/store": "0.0.0"
+    "@marketplace/server": "0.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1"
   }
