--- a/nextjs-blog/packages/frontend/package.json
+++ b/nextjs-blog/packages/frontend/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@marketplace/server": "0.0.0",
     "@marketplace/store": "0.0.0",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "next": "12.3.1",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "shared": "0.0.0",
-    "@marketplace/server": "0.0.0"
+    "shared": "0.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "nodemon": "^2.0.20"
   }
 }
