--- a/nextjs-blog/packages/shared/package.json
+++ b/nextjs-blog/packages/shared/package.json
@@ -22,5 +22,8 @@
   },
   "bugs": {
     "url": "https://github.com/helping083/next-js-react/issues"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.2"
   }
 }
