--- a/nextjs-blog/packages/api/package.json
+++ b/nextjs-blog/packages/api/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "@marketplace/store",
+  "name": "@marketplace/api",
   "version": "0.0.0",
-  "description": "redux store for the project",
-  "keywords": [
-    "redux",
-    "store",
-    "thunk",
-    "async"
-  ],
+  "description": "> TODO: description",
   "author": "Oleh <oleh.voitynskyi@devcom.com>",
   "homepage": "http://index.js",
   "license": "ISC",
@@ -24,12 +18,9 @@
     "url": "git+https://github.com/helping083/next-js-react.git"
   },
   "scripts": {
-    "test": "node ./__tests__/store.test.js"
+    "test": "node ./__tests__/api.test.js"
   },
   "bugs": {
     "url": "https://github.com/helping083/next-js-react/issues"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.2"
   }
 }
