--- a/nextjs-blog/packages/frontend/package.json
+++ b/nextjs-blog/packages/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@marketplace/server": "0.0.0",
-    "@marketplace/store": "0.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "next": "12.3.1",
@@ -18,9 +17,14 @@
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "shared": "0.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
     "nodemon": "^2.0.20"
