--- a/nextjs-blog/packages/server/package.json
+++ b/nextjs-blog/packages/server/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
     "mongodb": "^4.10.0"
+  },
+  "peerDependencies": {
+    "express": "^4.18.1"
   }
 }
