--- a/nextjs-blog/packages/shared/package.json
+++ b/nextjs-blog/packages/shared/package.json
@@ -25,5 +25,10 @@
   },
   "dependencies": {
     "dotenv": "^16.0.2"
+  },
+  "peerDependencies": {
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^2.1.3"
   }
 }
