--- a/nextjs-blog/packages/common/package.json
+++ b/nextjs-blog/packages/common/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "shared",
+  "name": "@common/frontend",
   "version": "0.0.0",
-  "description": "> TODO: description",
+  "description": "interfaces api services http",
+  "keywords": [
+    "http",
+    "interfaces"
+  ],
   "author": "Oleh <oleh.voitynskyi@devcom.com>",
-  "homepage": "https://github.com/helping083/next-js-react#readme",
+  "homepage": "http://index.js",
   "license": "ISC",
-  "main": "src/index.js",
+  "main": "index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,16 +22,9 @@
     "url": "git+https://github.com/helping083/next-js-react.git"
   },
   "scripts": {
-    "test": "node ./__tests__/shared.test.js"
+    "test": "node ./__tests__/common.test.js"
   },
   "bugs": {
     "url": "https://github.com/helping083/next-js-react/issues"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.2"
-  },
-  "peerDependencies": {
-    "@common/frontend": "0.0.0",
-    "react-query": "^3.39.2"
   }
 }
