--- a/nextjs-blog/packages/aws/package.json
+++ b/nextjs-blog/packages/aws/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "shared",
+  "name": "@aws/marketplace",
   "version": "0.0.0",
-  "description": "> TODO: description",
+  "description": "a layer for communicating with aws services",
+  "keywords": [
+    "aws",
+    "dynamodb",
+    "s3",
+    "aws-sdk"
+  ],
   "author": "Oleh <oleh.voitynskyi@devcom.com>",
-  "homepage": "https://github.com/helping083/next-js-react#readme",
+  "homepage": "http://index.js",
   "license": "ISC",
-  "main": "src/index.js",
+  "main": "index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -18,15 +24,12 @@
     "url": "git+https://github.com/helping083/next-js-react.git"
   },
   "scripts": {
-    "test": "node ./__tests__/shared.test.js"
+    "test": "node ./__tests__/aws.test.js"
   },
   "bugs": {
     "url": "https://github.com/helping083/next-js-react/issues"
   },
-  "peerDependencies": {
-    "react-query": "^3.39.2",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "autoprefixer": "^10.4.12"
+  "dependencies": {
+    "aws-sdk": "^2.1230.0"
   }
 }
