--- a/nextjs-blog/packages/shared/package.json
+++ b/nextjs-blog/packages/shared/package.json
@@ -18,15 +18,32 @@
     "url": "git+https://github.com/helping083/next-js-react.git"
   },
   "scripts": {
-    "test": "node ./__tests__/shared.test.js"
+    "test": "node ./__tests__/shared.test.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "bugs": {
     "url": "https://github.com/helping083/next-js-react/issues"
   },
   "peerDependencies": {
-    "react-query": "^3.39.2",
+    "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "autoprefixer": "^10.4.12"
-  }
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
+    "tailwindcss": "^3.1.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
+    "@storybook/addon-interactions": "^6.5.12",
+    "@storybook/addon-links": "^6.5.12",
+    "@storybook/builder-webpack5": "^6.5.12",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
+    "@storybook/testing-library": "^0.0.13",
+    "babel-loader": "^8.2.5"
+  },
+  "dependencies": {}
 }
