--- a/nextjs-blog/packages/core/package.json
+++ b/nextjs-blog/packages/core/package.json
@@ -11,9 +11,9 @@
     "dynamodb"
   ],
   "author": "Oleh <oleh.voitynskyi@devcom.com>",
-  "homepage": "http://index.js",
+  "homepage": "http://index.ts",
   "license": "ISC",
-  "main": "index.js",
+  "main": "index.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -33,5 +33,8 @@
   },
   "dependencies": {
     "axios": "^1.1.1"
+  },
+  "peerDependencies": {
+    "@common/frontend": "0.0.0"
   }
 }
