--- a/nextjs-blog/packages/shared/package.json
+++ b/nextjs-blog/packages/shared/package.json
@@ -5,7 +5,7 @@
   "author": "Oleh <oleh.voitynskyi@devcom.com>",
   "homepage": "https://github.com/helping083/next-js-react#readme",
   "license": "ISC",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
