--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,23 +8,9 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/node": "^13.9.5",
-    "@types/react": "^16.9.27",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-react": "^7.19.0",
-    "husky": "^4.2.3",
-    "lerna": "^5.5.2",
-    "lint-staged": "^10.0.10",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "typescript": "^4.6.2"
+    "lerna": "^5.5.2"
   },
   "scripts": {
-    "bootstrap": "yarn install && lerna bootstrap",
-    "frontend": "lerna run --scope frontend --stream dev",
-    "dev": "lerna run --scope frontend --stream dev"
+    "bootstrap": "yarn install && lerna bootstrap"
   }
 }
