--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -8,7 +8,16 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^5.5.2"
+    "@types/node": "^18.8.5",
+    "@types/react": "^18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "lerna": "^5.5.2",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "bootstrap": "yarn install && lerna bootstrap"
