--- a/nextjs-blog/packages/server/package.json
+++ b/nextjs-blog/packages/server/package.json
@@ -35,6 +35,9 @@
     "mongodb": "^4.10.0"
   },
   "peerDependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "express": "^4.18.2"
   }
 }
